# ocaml-gstreamer

./: .gitignore  dune-project  esy.json  gstreamer.opam
esy.lock/: index.json
examples/: .gitignore
examples/webrtc/: .merlin  dune  webrtc.ml
src/: dune
src/config/: discover.ml  discover.re
