(rule
    (targets c_library_flags.sexp c_flags.sexp flags.sexp)
    (deps (:discover config/discover.exe))
    (action (run %{discover})))

(library
  (name gstreamer)
  (public_name gstreamer)
  (libraries bigarray)
  (library_flags (:include flags.sexp))
  (c_library_flags (:include c_library_flags.sexp)))
