(rule
    (targets c_library_flags.sexp c_flags.sexp)
    (deps (:discover config/discover.exe))
    (action (run %{discover})))

(library
  (name gstreamer)
  (public_name gstreamer)
  (flags (-w -40 -w +26))
  (libraries bigarray threads)
  (c_library_flags (:include c_library_flags.sexp))
  (c_flags (:include c_flags.sexp))
  (c_names gstreamer_stubs))
